# todo-django

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
yuhu_challenge/: manage.py
yuhu_challenge/accounts/: forms.py  urls.py  views.py
yuhu_challenge/accounts/templates/: home.html  login.html  signup.html
yuhu_challenge/api_v1/: models.py  serializers.py  urls.py  views.py
yuhu_challenge/todos/: apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
yuhu_challenge/todos/migrations/: 0001_initial.py  0002_todoitem_created_at_todoitem_updated_at.py  0003_todoitem_is_done.py  0004_alter_todoitem_description.py  0005_todoitem_due_date.py
yuhu_challenge/todos/static/todos/: styles.css
yuhu_challenge/todos/templates/todos/: base_generic.html  todo_list.html  update_todo.html
yuhu_challenge/yuhu_challenge/: asgi.py  settings.py  urls.py  wsgi.py
